--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "lucide-react": "^0.452.0",
     "mathjs": "^13.2.0",
     "next": "14.2.15",
+    "plotly.js": "^2.35.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-plotly.js": "^2.6.0",
     "react-progress": "^0.0.12",
-    "recharts": "^2.13.0",
     "tailwind-merge": "^2.5.3",
     "xlsx": "^0.18.5"
   },
@@ -28,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-plotly.js": "^2.6.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
